# riscv32-sim

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Defs.hpp  LICENSE  README.md  build.sh  config.hpp.in  main.cpp  precommit.sh  sonar-project.properties
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-windows.yml  build.yml  cmake.yml  codeql.yml  sonarqube.yml  sonarscan.yml
.reuse/: dep5
cmake/: riscv.cmake  riscv32-sim.cmake  riscv32i-sim.cmake  riscv_test_env.cmake  submodule_update.cmake
riscv-tests/: CMakeLists.txt
riscv32-sim/: .clang-tidy  CMakeLists.txt
riscv32-sim/benchmark/: CMakeLists.txt  alu.cpp  alu_bench.cpp  alu_static_variadic.hpp  arith.hpp
riscv32-sim/include/: arith.hpp  config.hpp  csr.hpp  csr_file.hpp  csr_handler.hpp  decoder.hpp  ipc.hpp  iss_model.hpp  loader.hpp  masks.hpp  misa.hpp  mti_source.hpp  offset.hpp  options.hpp  program_counter.hpp  reg_file.hpp  rv32_isn.hpp  sparse_memory.hpp  sync_exception.hpp  tcpip.hpp  trap_cause.hpp  types.hpp
riscv32-sim/include/common/: SafeInt.hpp  consts.hpp  masks.hpp  misa.hpp  offset.hpp  serialize.hpp  trap_cause.hpp  types.hpp
riscv32-sim/include/decoder/: decoder.hpp  rv32_isn.hpp  rvc_ca.hpp  rvc_cr.hpp  rvc_isn.hpp
riscv32-sim/include/instr/: rv32_isn.hpp
riscv32-sim/include/ipc/: call_guard.hpp  fd.hpp  irq_server.hpp
riscv32-sim/include/iss/: model.hpp
riscv32-sim/include/memory/: sparse_memory.hpp
riscv32-sim/include/util/: format_helpers.hpp  json_export_helpers.hpp
riscv32-sim/include/zicsr/: csr.hpp  csr_file.hpp  misa.hpp  privilege.hpp  privilege_level.hpp  sync_exception.hpp  trap_cause.hpp
riscv32-sim/lib/: CMakeLists.txt
riscv32-sim/lib/common/include/common/: hart_state.hpp  offset.hpp  op.hpp  program_counter.hpp  serialize.hpp  types.hpp
riscv32-sim/lib/decoder/decoder/: CMakeLists.txt
riscv32-sim/lib/decoder/decoder/include/decoder/: rv32_isn.hpp
riscv32-sim/lib/decoder/decoder/src/: decoder.cpp
riscv32-sim/lib/ipc/: CMakeLists.txt
riscv32-sim/lib/ipc/examples/: tcp_client.cpp
riscv32-sim/lib/ipc/include/ipc/: call_guard.hpp  fd.hpp
riscv32-sim/src/: client.cpp  csr_file.cpp  decoder.cpp  ipc.cpp  irq_server.cpp  iss_model.cpp  json_test_op.cpp  loader.cpp  main.cpp  mti_source.cpp  reg_file.cpp  sparse_memory.cpp
riscv32-sim/src/decoder/: decoder.cpp  decoder16.cpp
riscv32-sim/src/ipc/: client.cpp  irq_server.cpp  minimal_test.cpp
riscv32-sim/src/iss/: model.cpp
riscv32-sim/src/memory/: sparse_memory.cpp
riscv32-sim/src/zicsr/: csr_file.cpp
riscv32-sim/unittest/: CMakeLists.txt  json_test.cc  sparse_memory_test.cc
riscv32i-sim/: CMakeLists.txt  main.cpp
riscv32i-sim/include/: Defs.hpp  Util.hpp  computer.hpp  csr_handler.hpp  decoder.hpp  iss_model.hpp  loader.hpp  rv32_decode.hpp  rv32_isn.hpp  rv32_isn_static.hpp  sparse_memory.hpp
riscv32i-sim/src/: computer.cpp  csr_handler.cpp  decoder.cpp  iss_model.cpp  loader.cpp  main.cpp  rv32_decode.cpp  sparse_memory.cpp
runtime/: CMakeLists.txt
runtime/arch-test/: CMakeLists.txt  model.ld  model_test.h  trap_handler.S  trap_handler.c
runtime/basic/: CMakeLists.txt  divu.c  fib.c  mul.c  mulhsu.c  serdar.ld  shift.c  test_config.cmake  timer.c
runtime/basic/cmake/: test_config.cmake  test_helpers.cmake
runtime/basic/crt/: crt.c  serdar.ld
runtime/basic/include/: serdar_core.h  serdar_stdint.h
runtime/basic/src/: csr_exception.c  divu.c  fib.c  mul.c  mulhsu.c  shift.c  timer.c
runtime/crt/: crt.c
runtime/riscv-tests/: CMakeLists.txt
runtime/test/: test.c
runtime/tvm/: CMakeLists.txt  test1.S
rvtest/: CMakeLists.txt  test1.S
spike/: CMakeLists.txt  serdar.ld  start.c  start.h  test.c  test_csr.c
src/: Computer.cpp  Defs.hpp  Util.hpp  computer.cpp  computer.hpp  main.cpp  sparse_memory.hpp
test/: CMakeLists.txt  sparse_memory_test.cc
test/gtest/: CMakeLists.txt  sparse_memory_test.cc
test/isa/: CMakeLists.txt
test/isa/sim/: CMakeLists.txt
test/isa/sim/crt/: crt.c
test/isa/sim/example/: csr_exception.c  divu.c  fib.c  mulhsu.c
test/isa/tvm/: CMakeLists.txt  test1.S  test2.S
tools/: build.sh  build_riscv_tests.sh  precommit.sh
